[package]
name = "poseidon"
version = "0.1.1"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
borsh = "0.9.1"
bs58 = "0.4.0"
ed25519-dalek = { version = "1.0.1", features = ["u64_backend"], default-features = false }
itertools = "0.10.3"
serde = { version = "1.0.133", features = ["derive"] }
short_vec = { git = "https://github.com/wasmium/short_vec.git" }
generic-array = { version = "0.14.5", features = ["serde"] }

[features]
