[package]
name = "poseidon"
version = "0.1.1"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
borsh = "0.9.1"
bs58 = "0.4.0"
ed25519-dalek = { version = "1.0.1", features = [
    "u64_backend",
], default-features = false }
itertools = "0.10.3"
serde = { version = "1.0.133", features = ["derive"] }
short_vec = { git = "https://github.com/wasmium/short_vec.git" }
generic-array = { version = "0.14.5", features = ["serde"] }
camino = { version = "1.0.7", optional = true }
futures-lite = { version = "1.12.0", optional = true }
async-fs = { version = "1.5.0", optional = true }
toml = { version = "0.5.8", optional = true }
json = "0.12.4"
minreq = { version = "2.5.1", features = ["https-rustls"] }
wasmium-securemem = { git = "https://github.com/wasmium/WasmiumSecureMem.git" }
seahash = "4.1.0"
tai64 = "4.0.0"
humantime = "2.1.0"
serde_json = "1.0.75"
serde_path_to_error = "0.1.6"
blake3 = "1.3.0"
wasmium_errors = "1.0.1"

[features]
smol_async_io = ["camino", "toml", "async-fs", "futures-lite"]
