[package]
name = "poseidon-client"
version = "0.5.4"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
license = "Apache-2.0"
readme = "README.md"
description = "A Simple to use Solana Client that has a fast compile time and cache friendly"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
bs58 = "0.4.0"
itertools = "0.10.3"
serde = { version = "1.0.142", features = ["derive"] }
short_vec = "0.1.0"
generic-array = { version = "0.14.6", features = ["serde"] }
camino = { version = "1.0.9", optional = true }
futures-lite = { version = "1.12.0", optional = true }
json = "0.12.4"
minreq = { version = "2.6.0", features = ["https-rustls"] }
seahash = "4.1.0"
serde_json = "1.0.83"
blake3 = "1.3.1"
wasmium_errors = "1.0.3"
sha2 = "0.10.2"
hex = "0.4.3"
bincode = "1.3.3"
ed25519-dalek = { version = "1.0.1", features = [
    "u64_backend",
], default-features = false }
smol = "1.2.5"
bytemuck = { version = "1.11.0", features = ["derive"] }

[features]
